# horizon-ai

./: .gitignore  Makefile  README.md  tracker.html
backend/: .env.example  README.md  database.py  main.py  pyproject.toml  requirements.txt
backend/services/: ai_service.py
horizon-ai/: .env.example  README.md  package-lock.json  package.json
horizon-ai/app/: globals.css  layout.tsx  page.tsx
horizon-ai/components/: CandidateRadar.tsx
horizon-ai/components/auth/: LoginForm.tsx
horizon-ai/components/candidate/: CandidatePortalView.tsx
horizon-ai/components/compare/: CompareView.tsx
horizon-ai/components/dashboard/: DashboardView.tsx
horizon-ai/components/global/: Header.tsx  Sidebar.tsx  TabPlaceholder.tsx
horizon-ai/components/jd/: JDParserView.tsx
horizon-ai/components/pipeline/: PipelineView.tsx  UploadModal.tsx
horizon-ai/components/settings/: SettingsView.tsx
horizon-ai/types/: index.ts
